--- a/did-sol/Cargo.toml
+++ b/did-sol/Cargo.toml
@@ -11,12 +11,8 @@ repository = "https://github.com/spruceid/ssi/"
 homepage = "https://github.com/spruceid/ssi/tree/main/did-sol/"
 documentation = "https://docs.rs/did-sol/"
 
-[features]
-ring = ["ssi-dids/ring"]
-openssl = ["ssi-dids/openssl"]
-
 [dependencies]
-ssi-dids = { path = "../ssi-dids", version = "0.1", default-features = false }
+ssi-dids = { path = "../ssi-dids", version = "0.1" }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
 ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false }
 chrono = { version = "0.4", features = ["serde"] }
@@ -26,5 +22,8 @@ async-trait = "0.1"
 bs58 = { version = "0.4", features = ["check"] }
 
 [dev-dependencies]
-ssi = { version = "0.4", path = "../", default-features = false }
+ssi-vc = { path = "../ssi-vc", version = "0.1", default-features = false }
+ssi-ldp = { path = "../ssi-ldp", version = "0.1", default-features = false, features = ["tezos", "w3c", "solana"] }
+ssi-core = { path = "../ssi-core", version = "0.1", default-features = false }
+ssi-json-ld = { path = "../ssi-json-ld", version = "0.1", default-features = false }
 tokio = { version = "1.0", features = ["macros"] }
