--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "json-ld-normalization"]
 	path = json-ld-normalization
 	url = https://github.com/w3c-ccg/rdf-dataset-canonicalization
+[submodule "vc-test-suite"]
+	path = vc-test-suite
+	url = https://github.com/w3c/vc-test-suite
