--- a/did-jwk/Cargo.toml
+++ b/did-jwk/Cargo.toml
@@ -13,26 +13,17 @@ documentation = "https://docs.rs/did-jwk/"
 
 [features]
 default = ["secp256k1", "secp256r1"]
-secp256k1 = ["ssi-dids/secp256k1"]
-secp256r1 = ["ssi-dids/secp256r1"]
-ssi_p384 = ["openssl"]
-
-ring = ["ssi-dids/ring"]
-openssl = ["ssi-dids/openssl"]
+secp256k1 = ["ssi-jwk/secp256k1"]
+secp256r1 = ["ssi-jwk/secp256r1"]
+ed25519 = ["ssi-jwk/ed25519"]
 
 [dependencies]
-ssi-dids = { path = "../ssi-dids", version = "0.1", default-features = false }
-ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = [
-  "ripemd-160",
-] }
+ssi-dids = { path = "../ssi-dids", version = "0.1" }
+ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
 async-trait = "0.1"
 multibase = "0.8"
 serde_json = "1.0"
 serde_jcs = "0.1"
 
 [dev-dependencies]
-ssi = { version = "0.4", path = "../", default-features = false }
-serde = { version = "1.0", features = ["derive"] }
 async-std = { version = "1.9", features = ["attributes"] }
-serde_json = "1.0"
-serde_jcs = "0.1"
