--- a/ssi-crypto/Cargo.toml
+++ b/ssi-crypto/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default = ["secp256k1", "ripemd-160"]
 secp256k1 = ["k256", "k256/keccak256", "keccak"]
-bbs = ["dep:bbs", "pairing-plus", "rand_old", "sha2_old", "hkdf"]
+bbs = ["dep:bbs", "pairing-plus", "rand_old", "sha2_old", "hkdf", "serde"]
 ripemd-160 = ["ripemd160", "secp256k1", "bs58"]
 keccak = ["keccak-hash"]
 ring = ["dep:ring"]
@@ -27,10 +27,14 @@ ed25519-dalek = { version = "1", optional = true }
 ripemd160 = { version = "0.9", optional = true }
 bbs = { version = "=0.4.1", optional = true }
 pairing-plus = { version = "=0.19.0", optional = true }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 zeroize = { version = "1.5", features = ["zeroize_derive"] }
 bs58 = { version = "0.4", features = ["check"], optional = true }
 digest = "0.9"
 
 [dev-dependencies]
 hex = "0.4"
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
