--- a/ssi-jws/Cargo.toml
+++ b/ssi-jws/Cargo.toml
@@ -14,12 +14,13 @@ secp256r1 = ["ssi-jwk/secp256r1", "p256", "blake2"]
 ed25519 = ["ssi-jwk/ed25519", "ed25519-dalek", "rand", "blake2"]
 ## enable RSA signatures
 rsa = ["ssi-jwk/rsa", "dep:rsa", "dep:sha2", "rand"]
+
 ## enable aleo ecosystem signatures
 aleo = ["ssi-jwk/aleo"]
 ## enable ethereum style signatures
 eip = ["ssi-jwk/eip", "ssi-crypto/keccak", "k256/keccak256", "secp256k1"]
 ## enable tezos style signatures
-tezos = ["ssi-jwk/tezos", "secp256k1", "secp256r1"]
+tezos = ["ssi-jwk/tezos", "secp256k1", "secp256r1", "ed25519"]
 
 ## Use the Ring crate for crypto operations
 openssl = ["ssi-jwk/openssl", "dep:openssl"]
@@ -50,3 +51,7 @@ clear_on_drop = "0.2.4"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 clear_on_drop = { version = "0.2.4", features = ["no_cc"] }
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
