--- a/ssi-ucan/Cargo.toml
+++ b/ssi-ucan/Cargo.toml
@@ -3,34 +3,18 @@ name = "ssi-ucan"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[features]
-default = ["eip", "w3c"]
-w3c = ["secp256k1", "secp256r1", "rsa", "ed25519"]
-secp256k1 = ["ssi-jwt/secp256k1"]
-secp256r1 = ["ssi-jwt/secp256r1"]
-ed25519 = ["ssi-jwt/ed25519"]
-rsa = ["ssi-jwt/rsa"]
-eip = ["ssi-jwt/eip"]
-tezos = ["ssi-jwt/tezos"]
-aleo = ["ssi-jwt/aleo", "ssi-caips/aleo"]
-
-openssl = ["ssi-jws/openssl", "ssi-jwk/openssl", "ssi-jwt/openssl"]
-ring = ["ssi-jws/ring", "ssi-jwk/ring", "ssi-jwt/ring"]
-
 [dependencies]
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "1.14", features = ["base64"]}
 base64 = "0.12"
-ssi-jwk = { path = "../ssi-jwk", version = "0.1"}
-ssi-jws = { path = "../ssi-jws", version = "0.1"}
-ssi-jwt = { path = "../ssi-jwt", version = "0.1"}
-ssi-dids = { path = "../ssi-dids", version = "0.1"}
-ssi-core = { path = "../ssi-core", version = "0.1"}
-ssi-caips = { path = "../ssi-caips", version = "0.1" }
+ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
+ssi-jws = { path = "../ssi-jws", version = "0.1", default-features = false }
+ssi-jwt = { path = "../ssi-jwt", version = "0.1", default-features = false }
+ssi-dids = { path = "../ssi-dids", version = "0.1" }
+ssi-core = { path = "../ssi-core", version = "0.1" }
+ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false  }
 libipld = { version = "0.13", features = ["serde-codec"] }
 
 
@@ -42,4 +26,5 @@ chrono = { version = "0.4", features = ["serde", "wasmbind"] }
 
 [dev-dependencies]
 async-std = { version = "1.9", features = ["attributes"] }
-did-method-key = { path = "../did-key", version = "0.1"}
+did-method-key = { path = "../did-key" }
+ssi-jws = { path = "../ssi-jws", version = "0.1", default-features = false, features = ["ed25519"] }
