--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,13 @@ exclude = ["json-ld-api/*", "json-ld-normalization/*", "vc-test-suite/*"]
 [features]
 default = ["w3c", "ed25519", "rsa", "ripemd-160", "eip", "tezos"]
 
-w3c = ["ssi-ldp/w3c", "secp256k1", "ed25519", "secp256r1", "rsa"]
+w3c = ["ssi-ldp/w3c", "secp256k1", "ed25519", "secp256r1", "rsa", "secp384r1"]
 ## enable secp256k1 signatures
 secp256k1 = ["ssi-ldp/secp256k1"]
 ## enable secp256r1 (p256) signatures
 secp256r1 = ["ssi-ldp/secp256r1"]
+## enable secp384r1 (p384) signatures
+secp384r1 = ["ssi-ldp/secp384r1"]
 ## enable ed25519 (EdDSA) signatures
 ed25519 = ["ssi-ldp/ed25519", "ssi-jwk/ed25519", "ssi-jws/ed25519"]
 ## enable RSA signatures
@@ -36,8 +38,6 @@ tezos = ["ssi-caips/tezos", "ssi-jwk/tezos", "ssi-jws/tezos", "ssi-ldp/tezos"]
 ## enable LDPs from the Solana Ecosystem
 solana = ["ssi-ldp/solana"]
 
-## Use the OpenSSL crate for crypto operations
-openssl = ["ssi-jwk/openssl", "ssi-jws/openssl", "ssi-ldp/openssl"]
 ## Use the Ring crate for crypto operations
 ring = ["ssi-jwk/ring", "ssi-jws/ring", "ssi-crypto/ring"]
 
