--- a/did-ion/Cargo.toml
+++ b/did-ion/Cargo.toml
@@ -33,7 +33,7 @@ thiserror = "1.0"
 base64 = "0.12"
 sha2 = "0.10"
 json-patch = "0.2.6"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 [target.'cfg(target_os = "android")'.dependencies.reqwest]
 version = "0.11"
