--- a/did-onion/Cargo.toml
+++ b/did-onion/Cargo.toml
@@ -14,7 +14,7 @@ documentation = "https://docs.rs/did-onion/"
 ssi-dids = { path = "../ssi-dids", version = "0.1", default-features = false }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1" }
 async-trait = "0.1"
-reqwest = { version = "0.11", features = ["json", "socks"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"] }
 http = "0.2"
 serde_json = "1.0"
 
