--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -18,7 +18,7 @@ ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, feat
 ssi-jws = { path = "../ssi-jws", version = "0.1", default-features = false }
 ssi-core = { path = "../ssi-core", version = "0.1" }
 chrono = { version = "0.4" }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
