--- a/did-web/Cargo.toml
+++ b/did-web/Cargo.toml
@@ -14,7 +14,7 @@ documentation = "https://docs.rs/did-web/"
 [dependencies]
 ssi-dids = { path = "../ssi-dids", version = "0.1" }
 async-trait = "0.1"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 http = "0.2"
 serde_json = "1.0"
 
