--- a/did-webkey/Cargo.toml
+++ b/did-webkey/Cargo.toml
@@ -21,7 +21,7 @@ ssi-jwk = { version = "0.1", path = "../ssi-jwk" , default-features = false }
 ssi-ssh = { version = "0.1", path = "../ssi-ssh" }
 anyhow = "1.0.52"
 async-trait = "0.1.52"
-reqwest = { version = "0.11.9", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 hex = "0.4.3"
 http = "0.2.6"
 serde_json = "1.0.75"
