--- a/ssi-dids/Cargo.toml
+++ b/ssi-dids/Cargo.toml
@@ -18,7 +18,7 @@ derive_builder = "0.9"
 bs58 = { version = "0.4", features = ["check"] }
 hex = "0.4"
 multibase = "0.8"
-reqwest = { version = "0.11", features = ["json"], optional = true }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
 percent-encoding = { version = "2.1", optional = true }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
 ssi-json-ld = { path = "../ssi-json-ld", version = "0.1" }
