--- a/ssi-jwk/Cargo.toml
+++ b/ssi-jwk/Cargo.toml
@@ -9,6 +9,8 @@ default = ["secp256k1", "secp256r1", "ed25519", "rsa", "eip", "ripemd-160"]
 secp256k1 = ["k256", "rand", "k256/keccak256", "ssi-crypto/secp256k1"]
 ## enable secp256r1 (p256) keys
 secp256r1 = ["p256", "rand"]
+## enable secp384r1 (p384) keys
+secp384r1 = ["p384", "rand"]
 ## enable ed25519 (EdDSA) keys
 ed25519 = ["ed25519-dalek", "rand_old", "getrandom"]
 ## enable RSA keys
@@ -23,7 +25,6 @@ eip = ["ssi-crypto/keccak", "k256/keccak256", "secp256k1"]
 ## enable tezos style key hashing
 tezos = ["blake2b_simd", "secp256k1", "secp256r1", "bs58"]
 
-openssl = ["dep:openssl"]
 ring = ["dep:ring"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -38,7 +39,7 @@ thiserror = "1.0"
 ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
 k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
 p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
-openssl = { version = "0.10", optional = true }
+p384 = { version = "0.11", optional = true, features = ["ecdsa"] }
 ring = { version = "0.16", optional = true }
 rsa = { version = "0.6", optional = true }
 rand = { version = "0.8", optional = true }
