--- a/ssi-jws/Cargo.toml
+++ b/ssi-jws/Cargo.toml
@@ -10,6 +10,8 @@ default = ["secp256k1", "secp256r1", "ed25519", "rsa", "eip", "ssi-jwk/ripemd-16
 secp256k1 = ["ssi-jwk/secp256k1", "k256/keccak256", "ssi-crypto/secp256k1", "blake2", "dep:sha2"]
 ## enable secp256r1 (p256) signatures
 secp256r1 = ["ssi-jwk/secp256r1", "p256", "blake2"]
+## enable secp384r1 (p384) signatures
+secp384r1 = ["ssi-jwk/secp384r1", "p384"]
 ## enable ed25519 (EdDSA) signatures
 ed25519 = ["ssi-jwk/ed25519", "ed25519-dalek", "rand", "blake2"]
 ## enable RSA signatures
@@ -23,8 +25,6 @@ eip = ["ssi-jwk/eip", "ssi-crypto/keccak", "k256/keccak256", "secp256k1"]
 tezos = ["ssi-jwk/tezos", "secp256k1", "secp256r1", "ed25519"]
 
 ## Use the Ring crate for crypto operations
-openssl = ["ssi-jwk/openssl", "dep:openssl"]
-## Use the OpenSSL crate for crypto operations
 ring = ["ssi-jwk/ring", "dep:ring", "rand", "blake2"]
 
 [dependencies]
@@ -34,13 +34,13 @@ serde_json = "1.0"
 base64 = "0.12"
 k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
 p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+p384 = { version = "0.11", optional = true, features = ["ecdsa"] }
 # blake2b_simd = { version = "0.5", optional = true }
 blake2 = { version = "0.10", optional = true }
 ed25519-dalek = { version = "1", optional = true }
 sha2 = { version = "0.10", optional = true }
 rsa = { version = "0.6", optional = true }
 rand = { version = "0.8", optional = true }
-openssl = { version = "0.10", optional = true }
 ring = { version = "0.16", optional = true }
 ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
 ssi-jwk = { path = "../ssi-jwk", version = "0.1"}
