Various changes following JWT VC interop (#488)
* Remove p384 from w3c as it wasn't before, and it's not yet that widely used, and it saved some bytes in the binary for the worker
* Add JWT type to their JWS headers
* Add v0.0 LinkedDomain context file
* Fix DIDURL deserialisation
* Make async-std a dev dep
* Use Box for DIDMethods for use without lazy_static
* Allow non-URI VP and VC IDs
  The specs say it should be a URI but Microsoft doesn't use URIs and according to Oliver it's an acceptable divergence as it is still debated.
* Don't default to test network for did:ion
* Add support for iat for JWT VP
* Clippy and fix URI building tests
* Pin multihash to current libipld's use version
* Replace URIOrString with existing StringOrURI
* Replace deprecated chrono function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ documentation = "https://docs.rs/ssi/"
 exclude = ["json-ld-api/*", "json-ld-normalization/*", "vc-test-suite/*"]
 
 [features]
-default = ["w3c", "ed25519", "rsa", "ripemd-160", "eip", "tezos"]
+default = ["w3c", "ripemd-160", "eip", "tezos"]
 
-w3c = ["ssi-ldp/w3c", "secp256k1", "ed25519", "secp256r1", "rsa", "secp384r1"]
+w3c = ["ssi-ldp/w3c", "secp256k1", "ed25519", "secp256r1", "rsa"]
 ## enable secp256k1 signatures
 secp256k1 = ["ssi-ldp/secp256k1"]
 ## enable secp256r1 (p256) signatures
