--- a/ssi-jwt/Cargo.toml
+++ b/ssi-jwt/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ssi-jwt"
 version = "0.1.0"
 edition = "2021"
+authors = ["Spruce Systems, Inc."]
+license = "Apache-2.0"
+description = "Implementation of JWT for the ssi library."
+repository = "https://github.com/spruceid/ssi/"
+documentation = "https://docs.rs/ssi-jwt/"
 
 [dependencies]
 thiserror = "1.0"
