--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "ssi"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Spruce Systems, Inc."]
 edition = "2021"
 license = "Apache-2.0"
 description = "Core library for Verifiable Credentials and Decentralized Identifiers."
 repository = "https://github.com/spruceid/ssi/"
 documentation = "https://docs.rs/ssi/"
+keywords = ["ssi", "did", "vc", "vp", "jsonld"]
 
 exclude = ["json-ld-api/*", "json-ld-normalization/*", "vc-test-suite/*"]
 
@@ -103,3 +104,6 @@ serde_json = "1.0"
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
+
+[workspace.metadata.release]
+tag-prefix = "{{crate_name}}/"
