--- a/ssi-crypto/Cargo.toml
+++ b/ssi-crypto/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ssi-crypto"
 version = "0.1.0"
 edition = "2021"
+authors = ["Spruce Systems, Inc."]
+license = "Apache-2.0"
+description = "Implementation of various hashes and signatures for the ssi library."
+repository = "https://github.com/spruceid/ssi/"
+documentation = "https://docs.rs/ssi-crypto/"
 
 [features]
 default = ["secp256k1", "ripemd-160"]
@@ -10,8 +15,6 @@ bbs = ["dep:bbs", "pairing-plus", "rand_old", "sha2_old", "hkdf", "serde"]
 ripemd-160 = ["ripemd160", "secp256k1", "bs58"]
 keccak = ["keccak-hash"]
 ring = ["dep:ring"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 thiserror = "1.0"
