--- a/ssi-tzkey/Cargo.toml
+++ b/ssi-tzkey/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ssi-tzkey"
 version = "0.1.0"
 edition = "2021"
+authors = ["Spruce Systems, Inc."]
+license = "Apache-2.0"
+description = "Implementation of Tezos related functions for the ssi library."
+repository = "https://github.com/spruceid/ssi/"
+documentation = "https://docs.rs/ssi-tzkey/"
 
 [dependencies]
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["tezos"]}
