--- a/ssi-ucan/Cargo.toml
+++ b/ssi-ucan/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ssi-ucan"
 version = "0.1.0"
 edition = "2021"
+authors = ["Spruce Systems, Inc."]
+license = "Apache-2.0"
+description = "Implementation of UCANs for the ssi library."
+repository = "https://github.com/spruceid/ssi/"
+documentation = "https://docs.rs/ssi-ucan/"
 
 [dependencies]
 thiserror = "1.0"
@@ -15,7 +20,7 @@ ssi-jwt = { path = "../ssi-jwt", version = "0.1", default-features = false }
 ssi-dids = { path = "../ssi-dids", version = "0.1" }
 ssi-core = { path = "../ssi-core", version = "0.1" }
 ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false  }
-libipld = { version = "0.14", features = ["serde-codec"] }
+libipld = { version = "0.14", default-features = false, features = ["dag-cbor", "dag-json", "derive", "serde-codec"]}
 
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
