--- a/ssi-vc/Cargo.toml
+++ b/ssi-vc/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ssi-vc"
 version = "0.1.0"
 edition = "2021"
+authors = ["Spruce Systems, Inc."]
+license = "Apache-2.0"
+description = "Implementation of Verifiable Credentials and Presentations for the ssi library."
+repository = "https://github.com/spruceid/ssi/"
+documentation = "https://docs.rs/ssi-vc/"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
