--- a/ssi-ldp/Cargo.toml
+++ b/ssi-ldp/Cargo.toml
@@ -60,6 +60,7 @@ chrono = { version = "0.4", features = ["serde", "wasmbind"] }
 
 [dev-dependencies]
 async-std = { version = "1.9", features = ["attributes"] }
+ssi-dids = { path = "../ssi-dids", version = "0.1", features = ["example"] }
 
 [package.metadata.docs.rs]
 all-features = true
