--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ members = [
 async-std = { version = "1.9", features = ["attributes"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
 serde_json = "1.0"
+ssi-dids = { path = "./ssi-dids", version = "0.1", features = ["example"] }
 
 [package.metadata.docs.rs]
 all-features = true
