--- a/vc-test/Cargo.toml
+++ b/vc-test/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 [dependencies]
 ssi = { version = "0.5", path = "../", features = ["example-http-issuer"] }
 ssi-ldp = { version = "0.1", path = "../ssi-ldp", default-features = false, features = ["test"] }
+ssi-dids = { path = "../ssi-dids", version = "0.1", features = ["example"] }
 async-std = { version = "1.9", features = ["attributes"] }
 serde_json = "1.0"
 base64 = "0.12"
