Upgrade `json-ld`. (#500)
- Update `json-ld` to version 0.10.0.
- Removes RDF deserialization now implemented by `json-ld`.
- Removes the global `Error` type for smaller dedicated errors.
- Removes the custom `rdf` module for the `rdf-types` crate.
- Update the URDNA2015 algorithm to use `rdf-types`.
  - Removes useless `Result` return types.
  - Do not make dataset implem choice (the return type of `normalize`
    is an iterator that can be collected into the preferred dataset
      impl.
- Removes unused dependencies.
* Fix `DID_V1_CONTEXT_NO_WWW` const type.
* Upgrade `ssi-dids` with latest `json-ld`.
* Propagate `ssi-dids` changes to the `did-*` libs.
* Use `QuadRef` to generalize `normalize` function.
Using `QuadRef` instead of `Quad` gives more freedom over the internal
representation of quads in the input dataset.
This is necessary for `ssi-ldp`.
* Upgrade `json-ld` in `ssi-ldp`.
* Upgrade `json-ld` in `ssi-vc` and `ssi-zcap-ld`.
Upgrade `json-ld` to `0.12.1`, adding some useful functions.
Add (again) `json_to_dataset` function in `ssi-json-ld`.
Refactor `ssi-json-ld`. Keep the `rdf` module.
Refactor `ssi-ldp` to take the new `ssi-json-ld` API into account.
* Set Rust msrv to 1.66.0
* Add `parse_ld_context` function.
* Upgrade `grdf` to `0.16.2` and `iref` to `2.2.3`.
* Fix `verify_proof_consistency` function.
* Configure minimum stack size.
* Simplify the `json_to_dataset` function signature.
This function with always called with `Options` providing an expand
context and the `Strict` expansion policy.
Now the `Options` are built inside the function. Only the expand context
needs to be provided.

--- a/ssi-vc/Cargo.toml
+++ b/ssi-vc/Cargo.toml
@@ -21,6 +21,7 @@ cacaos = { version = "0.5.1" }
 siwe-recap = { version = "0.1" }
 libipld = { version = "0.14", default-features = false, features = ["dag-cbor", "derive"]}
 multihash = { version = "0.16", default-features = false, features = ["blake3"] }
+iref = "2.2.2"
 ssi-jwt = { path = "../ssi-jwt", version = "0.1", default-features = false }
 ssi-jws = { path = "../ssi-jws", version = "0.1", default-features = false }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
