--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,14 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
+    
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: "1.66.0"
+        profile: minimal
+        override: true
+        components: rustfmt, clippy
 
     - uses: Swatinem/rust-cache@v2
 
@@ -48,6 +56,14 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
+
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: "1.66.0"
+        profile: minimal
+        override: true
+
     - uses: taiki-e/install-action@cargo-hack
 
     - uses: Swatinem/rust-cache@v2
