--- a/did-jwk/Cargo.toml
+++ b/did-jwk/Cargo.toml
@@ -24,6 +24,8 @@ async-trait = "0.1"
 multibase = "0.8"
 serde_json = "1.0"
 serde_jcs = "0.1"
+iref = "2.2"
+static-iref = "2.0"
 
 [dev-dependencies]
 async-std = { version = "1.9", features = ["attributes"] }
