--- a/did-pkh/Cargo.toml
+++ b/did-pkh/Cargo.toml
@@ -23,6 +23,8 @@ ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false }
 ssi-dids = { path = "../ssi-dids", version = "0.1" }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
 ssi-crypto = { path = "../ssi-crypto", version = "0.1", default-features = false }
+iref = "2.2"
+static-iref = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
