--- a/ssi-dids/Cargo.toml
+++ b/ssi-dids/Cargo.toml
@@ -25,6 +25,8 @@ hex = "0.4"
 multibase = "0.8"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
 percent-encoding = { version = "2.1", optional = true }
+iref = { version = "2.2.2", features = ["serde"] }
+static-iref = "2.0.0"
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
 ssi-json-ld = { path = "../ssi-json-ld", version = "0.1" }
 ssi-core = { path = "../ssi-core", version = "0.1"}
