--- a/ssi-json-ld/Cargo.toml
+++ b/ssi-json-ld/Cargo.toml
@@ -11,22 +11,19 @@ documentation = "https://docs.rs/ssi-json-ld/"
 [dependencies]
 thiserror = "1.0"
 async-std = { version = "1.9", features = ["attributes"] }
-json-ld = "0.4"
+json-ld = "0.12.1"
 iref = "^2.0.3"
-json = "^0.12"
-serde_json = "1.0"
+static-iref = "2"
+rdf-types = "0.12.15"
+locspan = "0.7.13"
+json-syntax = "0.9"
 futures = "0.3"
 lazy_static = "1.4"
-serde_jcs = "0.1"
 combination = "0.1"
+grdf = "0.16.2"
 ssi-contexts = { version = "0.1.3", path = "../contexts/" }
 ssi-crypto = { path = "../ssi-crypto", version = "0.1" }
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-chrono = { version = "0.4", features = ["serde"] }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-chrono = { version = "0.4", features = ["serde", "wasmbind"] }
-
 [dev-dependencies]
 difference = "2.0"
+nquads-syntax = "0.10.0"
