--- a/ssi-ldp/Cargo.toml
+++ b/ssi-ldp/Cargo.toml
@@ -33,6 +33,12 @@ test = []
 thiserror = "1.0"
 async-trait = "0.1"
 lazy_static = "1.4"
+iref = { version = "2.2.3", features = ["hashbrown"] }
+static-iref = "2.0"
+rdf-types = "0.12.15"
+grdf = "0.16.2"
+json-syntax = { version = "0.9", features = ["serde"] }
+locspan = "0.7.13"
 bs58 = { version = "0.4", features = ["check"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
