--- a/ssi-zcap-ld/Cargo.toml
+++ b/ssi-zcap-ld/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssi-zcap-ld"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Spruce Systems, Inc."]
 license = "Apache-2.0"
@@ -16,11 +16,11 @@ thiserror = "1.0"
 iref = "2.2.2"
 ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
 ssi-core = { path = "../ssi-core", version = "0.1" }
-ssi-dids = { path = "../ssi-dids", version = "0.1" }
-ssi-json-ld = { path = "../ssi-json-ld", version = "0.1", default-features = false }
-ssi-ldp = { path = "../ssi-ldp", version = "0.1", default-features = false }
+ssi-dids = { path = "../ssi-dids", version = "0.1.1" }
+ssi-json-ld = { path = "../ssi-json-ld", version = "0.2", default-features = false }
+ssi-ldp = { path = "../ssi-ldp", version = "0.2", default-features = false }
 
 [dev-dependencies]
 async-std = { version = "1.9", features = ["attributes"] }
-ssi-ldp = { path = "../ssi-ldp", version = "0.1", default-features = false, features = ["ed25519"] }
+ssi-ldp = { path = "../ssi-ldp", default-features = false, features = ["ed25519"] }
 ssi-dids = { path = "../ssi-dids", version = "0.1", features = ["example"] }
