--- a/ssi-json-ld/Cargo.toml
+++ b/ssi-json-ld/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssi-json-ld"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 authors = ["Spruce Systems, Inc."]
 license = "Apache-2.0"
@@ -27,3 +27,5 @@ ssi-crypto = { path = "../ssi-crypto", version = "0.1" }
 [dev-dependencies]
 difference = "2.0"
 nquads-syntax = "0.10.0"
+serde_json = "1.0.95"
+tokio = { version = "1.27.0", features = ["rt", "macros"] }
