--- a/ssi-vc/Cargo.toml
+++ b/ssi-vc/Cargo.toml
@@ -46,3 +46,5 @@ serde_jcs = "0.1"
 ssi-crypto = { path = "../ssi-crypto" }
 ssi-ldp = { path = "../ssi-ldp", features = ["aleo"] }
 ssi-dids = { path = "../ssi-dids", version = "0.1", features = ["example"] }
+josekit = "0.8.2"
+time = "0.3.20"
